# ril

./: .coverage  .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
.antigravitycli/: 0afd1e74-8716-4baa-a5f6-cd46b3882706.json
.codegraph/: daemon.pid
docs/: ril-daemon.service.example
ril/: __init__.py  config.py  converters.py  core.py  crawler.py  db.py  mcp_server.py  telegram_bot.py
ril-daemon/: Cargo.toml  README.md
ril-daemon/src/: config.rs  daemon.rs  domain.rs  error.rs  lib.rs  logging.rs  main.rs  python_bridge.rs  tests.rs
ril-daemon/src/mcp/: mod.rs  protocol.rs  tools.rs
ril-daemon/src/telegram/: callback_data.rs  callbacks.rs  handlers.rs  helpers.rs  keyboards.rs  mod.rs  state.rs  views.rs
ril-daemon/tests/: db_migrations_test.rs  telegram_callbacks_test.rs  telegram_commands_test.rs  telegram_comments_test.rs  telegram_pagination_test.rs  telegram_ratings_test.rs  telegram_regression_test.rs  telegram_stats_test.rs  telegram_tags_test.rs  telegram_views_test.rs
ril-daemon/tests/common/: mod.rs
src/ril/: bridge_json.py  cli.py  config.py  converters.py  core.py  crawler.py  db.py  pipeline.py  (+3 more)
tests/: conftest.py  test_bridge_json.py  test_converters.py  test_core.py  test_core_pdf.py  test_core_utils.py  test_crawler.py  test_db.py  test_db_fts.py  test_document_pipeline.py  test_epub_fidelity.py  test_fixtures.py  test_formula_transcription.py  test_hardening.py  test_main.py  test_mcp.py  test_pdf_epub_integration.py  test_pipeline.py  test_quickfixes.py  test_readability.py  test_security_html.py  test_telegram.py
(+7 files in other folders)
