[project]
name = "ril"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
    "playwright>=1.40.0",
    "playwright-stealth>=0.1.6",
    "readability-lxml>=0.8.1",
    "markdownify>=0.11.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.1",
    "pillow>=12.2.0",
]

[project.scripts]
ril = "ril.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]


