[package]
name = "ril-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros"] }
uuid = { version = "1.6", features = ["v4"] }
directories = "5.0"
dotenvy = "0.15"
reqwest = "0.11"
tempfile = "3.8"
